samples/_failures_safe/1761392933_c44d01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01f23bf4.c:173:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  173 | int main
      | ^~~
